--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Open index.html",
-            "file": "c:\\Users\\pablo\\OneDrive\\Escritorio\\HTML_PARCIAL_1\\index.html"
+            "file": "C:\\Users\\pablo\\OneDrive\\Escritorio\\HTML_PARCIAL_1\\index.html"
         }
     ]
 }
